# FA

./: .gitignore  CMakeLists.txt  FA_CAMODEL_MSPROF_REPORT.md  SUMMARY.md  aclnnFlashAttentionScoreV2_源码分析.md  analyze_trace.py  run.sh  操作手册.md
fa_camodel_test/: CMakeLists.txt  QUICK_START.md  README.md  TEST_RESULTS.md  aclnn_fa_stub.cpp  main.cpp  run_simulator.sh  scenario1_vit.json  test_fa_simulator.py
op_test_template/: test_fa_builtin.cpp
op_test_template/msprof_output/OPPROF_20260629042503_FWMIRSZUHRFRAUVQ/dump/: core0.biu.brif.log.dump  core0.biu.bwif.log.dump  core0.cubecore0.ccu_log.dump  core0.cubecore0.dcache_log.dump  core0.cubecore0.ifu.dump  core0.cubecore0.instr_log.dump
pruned_fa/op_kernel/: flash_attention_score_apt.cpp
pruned_fa/op_kernel/arch35/: flash_attention_score_entry_regbase.h  flash_attention_score_template_tiling_key.h
pruned_fa_cann/op_kernel/: explicit_fa_kernel.cpp  flash_attention_score_apt.cpp
